test/fail/M0216.mo
import { type T } "M0216/lib";

let t : T = 10;
